snapshots/aws_nlb_multi_az/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0074e55bb896cc55a",
     "NetworkAclId": "acl-0349fe485d1f2f10a",
     "SubnetId": "subnet-0f1e94db75987f9dd"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0f52d7db8c6d86267",
     "NetworkAclId": "acl-0349fe485d1f2f10a",
     "SubnetId": "subnet-0dcea715c1db4ae75"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.100.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0349fe485d1f2f10a",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Name",
     "Value": "example-private-nacl"
    },
    {
     "Key": "Environment",
     "Value": "dev"
    }
   ],
   "VpcId": "vpc-0e7231b06d4761dc4"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-f4145ab7",
     "NetworkAclId": "acl-09822373d22574aad",
     "SubnetId": "subnet-0f8d5a31df99af6e6"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-09822373d22574aad",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0e7231b06d4761dc4"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0aaa47d8e19cd450a",
     "NetworkAclId": "acl-00ffd5d6e761fa7e5",
     "SubnetId": "subnet-04053301e0eabf0f7"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0c80ac838357cdf99",
     "NetworkAclId": "acl-00ffd5d6e761fa7e5",
     "SubnetId": "subnet-0738641877c8d9b1b"
    },
    {
     "NetworkAclAssociationId": "aclassoc-03a55231897d7dff0",
     "NetworkAclId": "acl-00ffd5d6e761fa7e5",
     "SubnetId": "subnet-0f633d6b6a9e3243f"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-00ffd5d6e761fa7e5",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "dev"
    },
    {
     "Key": "Name",
     "Value": "example-public-nacl"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0e7231b06d4761dc4"
  }
 ]
}
